# treadmill

./: .gitignore  app.conf.template  app.py  pyproject.toml  run.sh
app/: keyboard.py  treadmill.py  ui.py
